--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 Flask==2.2.2
 Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.2
+psycopg2-binary==2.9.5
 python-dateutil==2.8.2
 pytz==2022.7.1
 simplejson==3.18.1
+SQLAlchemy==1.4.46
 Werkzeug==2.2.2
+https://github.com/python-cas/python-cas/archive/master.zip
 
 # For testing
 pytest==7.2.1
 pytest-flask==1.2.0
-tox==4.3.5
+tox==4.4.0
