--- a/.ebextensions/00_ami.config
+++ b/.ebextensions/00_ami.config
@@ -4,7 +4,6 @@
 
 packages:
   yum:
-    amazon-linux-extras: []
     awslogs: []
     gcc-c++: []
     git: []
@@ -12,9 +11,7 @@ packages:
 
 commands:
   01_postgres_activate:
-    command: sudo amazon-linux-extras enable postgresql14
-  02_postgres_install:
-    command: sudo yum install -y postgresql
+    command: sudo amazon-linux-extras install postgresql14
 
 option_settings:
   aws:elasticbeanstalk:cloudwatch:logs:
