--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ addons:
   postgresql: "9.6"
 
 before_install:
-  - nvm install "$(cat .nvmrc)"
+  - cd ${TRAVIS_BUILD_DIR}
+  - nvm install 16
 
 install:
   - npm install
