RIP-57, make /api/config available globally on front-end

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@
 # Only variables that start with 'VUE_APP_' will be statically embedded into the client bundle.
 ####
 
-VUE_APP_API_BASE_URL=''
-VUE_APP_DEBUG=false
+VITE_APP_API_BASE_URL=''
+VITE_APP_DEBUG=false
