--- a/.env.development
+++ b/.env.development
@@ -3,5 +3,5 @@
 # Only variables that start with 'VUE_APP_' will be statically embedded into the client bundle.
 ####
 
-VUE_APP_API_BASE_URL='http://localhost:5000'
-VUE_APP_DEBUG=true
+VITE_APP_API_BASE_URL='http://localhost:5000'
+VITE_APP_DEBUG=true
