RIP-42 Diablo-style base classes for background jobs

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,7 @@ install:
   - pip3 install tox
 
 script:
+  - psql -c 'create database nostromo_test;' -U postgres
+  - psql nostromo_test -c 'create role ripley superuser login; alter schema public owner to ripley;' -U postgres
   - pip3 install -r requirements.txt
   - tox --parallel || travis_terminate 1
