--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-SQLAlchemy==3.0.2
 psycopg2-binary==2.9.5
 python-dateutil==2.8.2
 pytz==2022.7.1
+schedule==1.1.0
 simplejson==3.18.1
 SQLAlchemy==1.4.46
 Werkzeug==2.2.2
