--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+canvasapi==2.2.0
 Flask==2.2.2
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.2
@@ -14,4 +15,5 @@ Werkzeug==2.2.2
 # For testing
 pytest==7.2.1
 pytest-flask==1.2.0
+requests-mock==1.9.3
 tox==4.4.0
