--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ripley",
   "version": "0.1.0",
   "private": false,
-  "engines" : {
-    "npm" : ">=8.0.0 <9.0.0",
-    "node" : ">=16.0.0 <17.0.0"
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=16.0.0 <17.0.0"
   },
   "scripts": {
     "build-vue": "vite build",
@@ -18,7 +18,10 @@
     "@vue-a11y/announcer": "^3.1.5",
     "axios": "1.2.3",
     "core-js": "3.27.2",
+    "js-file-download": "0.4.12",
     "lodash": "4.17.21",
+    "mitt": "3.0.0",
+    "moment": "2.29.4",
     "moment-timezone": "0.5.40",
     "pinia": "2.0.29",
     "roboto-fontface": "*",
