--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+boto3==1.20.24
 canvasapi==3.0.0
 Flask==2.2.2
 Flask-Login==0.6.2
@@ -9,10 +10,14 @@ python-dateutil==2.8.2
 pytz==2022.7.1
 schedule==1.1.0
 simplejson==3.18.1
+smart-open==4.2.0
 SQLAlchemy==2.0.1
 Werkzeug==2.2.2
+zipstream-new==1.1.8
 
 # For testing
+
+moto==3.0.7
 pytest==7.2.1
 pytest-flask==1.2.0
 requests-mock==1.10.0
