--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ install:
 
 script:
   - psql -c 'create database nostromo_test;' -U postgres
+  - psql -c 'create database ripley_loch_test;' -U postgres
   - psql nostromo_test -c 'create role ripley superuser login; alter schema public owner to ripley;' -U postgres
+  - psql ripley_loch_test -c 'alter schema public owner to ripley;' -U postgres
   - pip3 install -r requirements.txt
   - tox --parallel || travis_terminate 1
