--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 ####
 # Vue.js environment variables and modes: https://cli.vuejs.org/guide/mode-and-env.html
-# Only variables that start with 'VUE_APP_' will be statically embedded into the client bundle.
+# Only variables that start with 'VITE_APP_' will be statically embedded into the client bundle.
 ####
 
 VITE_APP_API_BASE_URL='http://localhost:5000'
