--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "node": ">=16.0.0 <17.0.0"
   },
   "scripts": {
-    "build-vue": "vite build",
+    "build-vue": "vite build --outDir='dist/static'",
     "lint-vue": "eslint . --ignore-path .gitignore",
     "lint-vue-fix": "eslint . --fix --ignore-path .gitignore",
     "preview": "vite preview",
-    "serve-vue": "vite"
+    "serve-vue": "vite --host"
   },
   "dependencies": {
     "@mdi/font": "7.1.96",
@@ -25,9 +25,9 @@
     "moment-timezone": "0.5.40",
     "pinia": "2.0.29",
     "roboto-fontface": "*",
-    "vue": "3.2.45",
+    "vue": "3.2.47",
     "vue-router": "4.1.6",
-    "vuetify": "^3.1.1",
+    "vuetify": "3.1.4",
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
@@ -40,7 +40,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
-    "vite": "^4.0.4",
+    "vite": "4.0.4",
     "vite-plugin-vuetify": "^1.0.1",
     "vue-tsc": "^1.0.24"
   }
