--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.3
 ldap3==2.7
 psycopg2-binary==2.9.5
+PyLTI1p3==2.0.0
 python-cas==1.6.0
 python-dateutil==2.8.2
 pytz==2022.7.1
