--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,16 @@ Flask-Caching==2.0.2
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.3
 ldap3==2.7
-psycopg2-binary==2.9.5
+psycopg2==2.9.5
 PyLTI1p3==2.0.0
 python-cas==1.6.0
 python-dateutil==2.8.2
 pytz==2022.7.1
 schedule==1.1.0
-simplejson==3.18.1
+simplejson==3.18.3
 smart-open==4.1.2
 SQLAlchemy==1.4.46
-Werkzeug==2.2.2
+Werkzeug==2.2.3
 zipstream-new==1.1.8
 
 # For testing
@@ -23,4 +23,4 @@ moto==3.0.7
 pytest==7.2.1
 pytest-flask==1.2.0
 requests-mock==1.10.0
-tox==4.4.4
+tox==4.4.5
