RIP-72, 00_ami.config > 02_libpq_devel_install

--- a/.ebextensions/00_ami.config
+++ b/.ebextensions/00_ami.config
@@ -8,14 +8,13 @@ packages:
     awslogs: []
     gcc-c++: []
     git: []
-    libpq-devel: []
     mod_ssl: []
 
 commands:
   01_postgres_activate:
-    command: sudo amazon-linux-extras enable postgresql14
-  02_postgres_install:
-    command: sudo yum install -y postgresql
+    command: sudo amazon-linux-extras install postgresql14
+  02_libpq_devel_install:
+    command: sudo yum install -y libpq-devel
 
 option_settings:
   aws:elasticbeanstalk:cloudwatch:logs:
