--- a/package.json
+++ b/package.json
@@ -17,33 +17,33 @@
     "@ckeditor/ckeditor5-build-classic": "^36.0.1",
     "@ckeditor/ckeditor5-vue": "^4.0.1",
     "@mdi/font": "7.1.96",
-    "@vue-a11y/announcer": "^3.1.5",
-    "axios": "1.3.3",
-    "core-js": "3.28.0",
+    "@vue-a11y/announcer": "3.1.5",
+    "axios": "1.3.4",
+    "core-js": "3.29.0",
     "js-file-download": "0.4.12",
     "lodash": "4.17.21",
     "mitt": "3.0.0",
     "moment": "2.29.4",
-    "moment-timezone": "0.5.40",
-    "pinia": "2.0.30",
+    "moment-timezone": "0.5.41",
+    "pinia": "2.0.32",
     "roboto-fontface": "*",
     "vue": "3.2.47",
     "vue-router": "4.1.6",
-    "vuetify": "3.1.5",
+    "vuetify": "3.1.6",
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
-    "@types/node": "^18.14.0",
+    "@types/node": "^18.14.2",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "eslint": "^8.34.0",
+    "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
-    "sass": "^1.58.2",
-    "typescript": "^4.9.4",
+    "sass": "^1.58.3",
+    "typescript": "^4.9.5",
     "vite": "4.0.4",
-    "vite-plugin-vuetify": "^1.0.1",
-    "vue-tsc": "^1.1.2"
+    "vite-plugin-vuetify": "^1.0.2",
+    "vue-tsc": "^1.2.0"
   }
 }
