--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ schedule==1.1.0
 simplejson==3.18.3
 smart-open==4.1.2
 SQLAlchemy==1.4.46
+Unidecode==1.3.6
 Werkzeug==2.2.3
 zipstream-new==1.1.8
 
