RIP-92 Collect new active users from data loch

--- a/tox.ini
+++ b/tox.ini
@@ -50,7 +50,7 @@ exclude =
     config/*-local.py
     dist
     node_modules
-ignore = D101,D102,D103,D104,D105,D107
+ignore = D101,D102,D103,D104,D105,D107,W503
 import-order-style = google
 max-complexity = 12
 max-line-length = 150
