--- a/.ebextensions/00_ami.config
+++ b/.ebextensions/00_ami.config
@@ -43,6 +43,6 @@ files:
     group: root
     content: |
       [/var/app/current/ripley.log]
-      log_group_name=`{"Fn::Join":["/", ["/aws/elasticbeanstalk", { "Ref":"AWSEBEnvironmentName" }, "var/app/current/damien.log"]]}`
+      log_group_name=`{"Fn::Join":["/", ["/aws/elasticbeanstalk", { "Ref":"AWSEBEnvironmentName" }, "var/app/current/ripley.log"]]}`
       log_stream_name={instance_id}
       file=/var/app/current/ripley.log*
