--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
+bonsai==1.5.1
 boto3==1.20.24
 canvasapi==3.0.0
 Flask==2.2.3
 Flask-Caching==2.0.2
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.3
-ldap3==2.7
 psycopg2==2.9.5
 PyLTI1p3==2.0.0
 python-cas==1.6.0
