--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint-vue": "eslint . --ignore-path .gitignore",
     "lint-vue-fix": "eslint . --fix --ignore-path .gitignore",
     "preview": "vite preview",
-    "serve-vue": "vite --host"
+    "serve-vue": "vite --host --strictPort"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^36.0.1",
@@ -29,20 +29,20 @@
     "roboto-fontface": "*",
     "vue": "3.2.47",
     "vue-router": "4.1.6",
-    "vuetify": "3.1.6",
+    "vuetify": "3.1.10",
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
-    "@types/node": "^18.14.2",
+    "@types/node": "^18.15.3",
     "@types/webfontloader": "^1.6.35",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^4.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "eslint": "^8.35.0",
+    "eslint": "^8.36.0",
     "eslint-plugin-vue": "^9.9.0",
-    "sass": "^1.58.3",
+    "sass": "^1.59.3",
     "typescript": "^4.9.5",
-    "vite": "4.0.4",
+    "vite": "4.2.0",
     "vite-plugin-vuetify": "^1.0.2",
     "vue-tsc": "^1.2.0"
   }
