--- a/package.json
+++ b/package.json
@@ -14,35 +14,35 @@
     "serve-vue": "vite --host --strictPort"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
-    "@ckeditor/ckeditor5-vue": "^4.0.1",
-    "@mdi/font": "7.1.96",
+    "@ckeditor/ckeditor5-build-classic": "36.0.1",
+    "@ckeditor/ckeditor5-vue": "4.0.1",
+    "@mdi/font": "7.2.96",
     "@vue-a11y/announcer": "3.1.5",
     "axios": "1.3.4",
-    "core-js": "3.29.0",
+    "core-js": "3.29.1",
     "js-file-download": "0.4.12",
     "lodash": "4.17.21",
     "mitt": "3.0.0",
     "moment": "2.29.4",
     "moment-timezone": "0.5.41",
-    "pinia": "2.0.32",
+    "pinia": "2.0.33",
     "roboto-fontface": "*",
     "vue": "3.2.47",
     "vue-router": "4.1.6",
-    "vuetify": "3.1.10",
+    "vuetify": "3.1.11",
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
-    "@types/node": "^18.15.3",
+    "@types/node": "^18.15.5",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "eslint": "^8.36.0",
     "eslint-plugin-vue": "^9.9.0",
     "sass": "^1.59.3",
-    "typescript": "^4.9.5",
-    "vite": "4.2.0",
+    "typescript": "^5.0.2",
+    "vite": "4.2.1",
     "vite-plugin-vuetify": "^1.0.2",
     "vue-tsc": "^1.2.0"
   }
