--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "sass": "^1.59.3",
     "typescript": "^5.0.2",
-    "vite": "4.2.1",
+    "vite": "^4.2.1",
     "vite-plugin-vuetify": "^1.0.2",
     "vue-tsc": "^1.2.0"
   }
