--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "serve-vue": "vite --host --strictPort"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "36.0.1",
-    "@ckeditor/ckeditor5-vue": "4.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-vue": "^4.0.1",
     "@mdi/font": "7.2.96",
     "@vue-a11y/announcer": "3.1.5",
     "axios": "1.3.4",
@@ -29,7 +29,7 @@
     "roboto-fontface": "*",
     "vue": "3.2.47",
     "vue-router": "4.1.6",
-    "vuetify": "3.1.11",
+    "vuetify": "3.1.12",
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
