--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,6 @@ script:
   - psql ripley_loch_test -c 'alter schema public owner to ripley;' -U postgres
   - pip3 install -r requirements.txt
   - tox --parallel || travis_terminate 1
+
+services:
+  - redis-server
