RIP-213: adds redis status to api/ping, install redis on EC2

--- a/.ebextensions/00_ami.config
+++ b/.ebextensions/00_ami.config
@@ -16,6 +16,10 @@ commands:
     command: sudo amazon-linux-extras install postgresql14
   02_libpq_devel_install:
     command: sudo yum install -y libpq-devel
+  03_redis_install:
+    command: sudo amazon-linux-extras install redis6
+  04_redis_start:
+    command: sudo redis-server
 
 option_settings:
   aws:elasticbeanstalk:cloudwatch:logs:
