--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pytz==2023.3
 redis==4.5.5
 rq==1.15.0
 schedule==1.2.0
+setproctitle==1.3.2
 simplejson==3.19.1
 smart-open==4.1.2
 SQLAlchemy==1.4.48
