RIP-217: adds xenomorph to buildspec, updates script to work locally

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,7 +30,8 @@ artifacts:
   - 'application.py'
   - 'config/**/*'
   - 'consoler.py'
-  - 'ripley/**/*'
   - 'dist/**/*'
   - 'requirements.txt'
+  - 'ripley/**/*'
   - 'scripts/**/*'
+  - 'xenomorph.py'
