--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
     "mitt": "3.0.0",
     "moment": "2.29.4",
     "moment-timezone": "0.5.43",
-    "pinia": "2.1.3",
+    "pinia": "2.1.4",
     "roboto-fontface": "*",
     "vue": "3.3.4",
     "vue-router": "4.2.2",
-    "vuetify": "3.3.2",
+    "vuetify": "3.3.5",
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
-    "@types/node": "^18.16.16",
+    "@types/node": "^20.3.1",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "eslint": "^8.42.0",
-    "eslint-plugin-vue": "^9.14.1",
+    "eslint": "^8.43.0",
+    "eslint-plugin-vue": "^9.15.0",
     "sass": "^1.62.1",
-    "typescript": "^4.9.5",
+    "typescript": "5.0.4",
     "vite": "^4.3.9",
     "vite-plugin-vuetify": "^1.0.2",
-    "vue-tsc": "^1.6.5"
+    "vue-tsc": "^1.8.1"
   }
 }
