--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@vue-a11y/announcer": "3.1.5",
     "axios": "1.4.0",
     "core-js": "3.30.2",
+    "highcharts": "^11.1.0",
+    "highcharts-vue": "^1.4.2",
     "js-file-download": "0.4.12",
     "lodash": "4.17.21",
     "mitt": "3.0.0",
     "moment": "2.29.4",
     "moment-timezone": "0.5.43",
+    "normalize.css": "^8.0.1",
     "pinia": "2.1.4",
     "roboto-fontface": "*",
     "vue": "3.3.4",
