--- a/package.json
+++ b/package.json
@@ -14,39 +14,39 @@
     "serve-vue": "vite --host --strictPort"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^38.0.1",
-    "@ckeditor/ckeditor5-vue": "^4.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^38.1.0",
+    "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@mdi/font": "7.2.96",
     "@vue-a11y/announcer": "3.1.5",
     "axios": "1.4.0",
-    "core-js": "3.30.2",
+    "core-js": "3.31.1",
     "highcharts": "^11.1.0",
     "highcharts-vue": "^1.4.2",
     "js-file-download": "0.4.12",
     "lodash": "4.17.21",
-    "mitt": "3.0.0",
+    "mitt": "3.0.1",
     "moment": "2.29.4",
     "moment-timezone": "0.5.43",
-    "normalize.css": "^8.0.1",
+    "normalize.css": "8.0.1",
     "pinia": "2.1.4",
     "roboto-fontface": "*",
     "vue": "3.3.4",
-    "vue-router": "4.2.2",
-    "vuetify": "3.3.5",
+    "vue-router": "4.2.4",
+    "vuetify": "3.3.7",
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.4.1",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "eslint": "^8.43.0",
-    "eslint-plugin-vue": "^9.15.0",
-    "sass": "^1.62.1",
+    "eslint": "^8.44.0",
+    "eslint-plugin-vue": "^9.15.1",
+    "sass": "^1.63.6",
     "typescript": "5.0.4",
-    "vite": "^4.3.9",
+    "vite": "^4.4.2",
     "vite-plugin-vuetify": "^1.0.2",
-    "vue-tsc": "^1.8.1"
+    "vue-tsc": "^1.8.4"
   }
 }
