--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "serve-vue": "vite --host --strictPort"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^38.1.0",
-    "@ckeditor/ckeditor5-vue": "^5.1.0",
+    "@ckeditor/ckeditor5-build-classic": "38.1.1",
+    "@ckeditor/ckeditor5-vue": "5.1.0",
     "@mdi/font": "7.2.96",
     "@vue-a11y/announcer": "3.1.5",
     "axios": "1.4.0",
