--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sass": "^1.65.1",
     "typescript": "5.1.6",
     "vite": "^4.4.9",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vuetify": "^1.0.2",
     "vue-tsc": "^1.8.8"
   }
