--- a/.ebextensions/03_create_xenomorph_service.config
+++ b/.ebextensions/03_create_xenomorph_service.config
@@ -9,15 +9,14 @@ files:
             After=network.target
 
             [Service]
-            User=webapp
+            User=root
+            Group=root
             Type=simple
             WorkingDirectory=/var/app/current
             Environment=LANG=en_US.UTF-8
             Environment=LC_ALL=en_US.UTF-8
             Environment=LC_LANG=en_US.UTF-8
             ExecStart=/var/app/current/scripts/start_rq_worker.sh
-            ExecReload=/bin/kill -s HUP $MAINPID
-            ExecStop=/bin/kill -s TERM $MAINPID
             PrivateTmp=true
             Restart=always
 
