--- a/.ebextensions/00_ami.config
+++ b/.ebextensions/00_ami.config
@@ -25,7 +25,9 @@ option_settings:
   aws:elasticbeanstalk:environment:proxy:
     ProxyServer: apache
   aws:elasticbeanstalk:environment:proxy:staticfiles:
-    /static: dist/static
+    /assets: dist/static/assets
+    /canvas-customization: dist/static/canvas-customization
+    /favicon.ico: dist/static/favicon.ico
 
 files:
   /etc/awslogs/awscli.conf:
