RIP-404, upgrade SQLAlchemy to v2.0.21

--- a/tox.ini
+++ b/tox.ini
@@ -21,13 +21,13 @@ commands = npm run lint-vue-fix {posargs}
 commands = npm run build-vue
 
 [testenv:test]
-commands = pytest --durations=3 {posargs: -p no:warnings tests}
+commands = pytest --durations=3 {posargs: tests}
 
 [testenv:lint-py]
 # Bottom of file has Flake8 settings
 commands = flake8 {posargs:ripley config consoler.py application.py scripts tests xenomorph.py}
 deps =
-    flake8==6.0.0
+    flake8==6.1.0
     flake8-builtins>=2.1.0
     flake8-colors>=0.1.9
     flake8-commas>=2.1.0
@@ -35,7 +35,7 @@ deps =
     flake8-import-order>=0.18.2
     flake8-pytest>=1.4
     flake8-quotes>=3.3.2
-    flake8-tidy-imports>=4.8.0
+    flake8-tidy-imports>=4.10.0
     pep8-naming>=0.13.3
     pydocstyle>=6.3.0
 
