--- a/requirements.txt
+++ b/requirements.txt
@@ -7,25 +7,25 @@ Flask-Caching==2.0.2
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.1.1
 hiredis==2.2.3
-psycopg2==2.9.7
+psycopg2==2.9.9
 PyLTI1p3==2.0.0
 python-cas==1.6.0
 python-dateutil==2.8.2
-pytz==2023.3
+pytz==2023.3.post1
 redis==4.6.0
 rq==1.15.1
-schedule==1.2.0
-setproctitle==1.3.2
+schedule==1.2.1
+setproctitle==1.3.3
 simplejson==3.19.1
 smart-open==4.1.2
 SQLAlchemy==2.0.21
-Unidecode==1.3.6
+Unidecode==1.3.7
 Werkzeug==2.3.7
 zipstream-new==1.1.8
 
 # For testing
 
-fakeredis==2.18.1
+fakeredis==2.19.0
 moto==3.1.16
 pytest==7.4.2
 pytest-flask==1.2.0
