--- a/.ebextensions/03_create_xenomorph_service.config
+++ b/.ebextensions/03_create_xenomorph_service.config
@@ -17,6 +17,7 @@ files:
             Environment=LC_ALL=en_US.UTF-8
             Environment=LC_LANG=en_US.UTF-8
             ExecStart=/var/app/current/scripts/start_rq_worker.sh
+            KillSignal=SIGUSR1
             PrivateTmp=true
             Restart=always
 
