--- a/package.json
+++ b/package.json
@@ -30,21 +30,23 @@
     "roboto-fontface": "*",
     "vue": "3.3.4",
     "vue-router": "4.2.5",
-    "vuetify": "3.3.20",
+    "vuetify": "3.3.21",
     "webfontloader": "1.6.28"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.199",
-    "@types/node": "^20.8.2",
+    "@types/node": "^20.8.4",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "eslint": "^8.50.0",
+    "eslint": "^8.51.0",
     "eslint-plugin-vue": "^9.17.0",
-    "sass": "^1.68.0",
+    "eslint-plugin-vue-scoped-css": "^2.5.1",
+    "sass": "^1.69.3",
     "typescript": "5.2.2",
     "vite": "^4.4.11",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vuetify": "^1.0.2",
-    "vue-tsc": "^1.8.15"
+    "vue-eslint-parser": "^9.3.2",
+    "vue-tsc": "^1.8.19"
   }
 }
