--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ python-cas==1.6.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
 redis==4.6.0
+requests==2.31.0
 rq==1.15.1
 schedule==1.2.1
 setproctitle==1.3.3
