--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands = npm run lint-vue-fix {posargs}
 commands = npm run build-vue
 
 [testenv:test]
-commands = pytest --durations=3 {posargs: tests}
+commands = pytest --durations=3 -W ignore::DeprecationWarning {posargs: tests}
 
 [testenv:lint-py]
 # Bottom of file has Flake8 settings
