--- a/.ebextensions/03_create_xenomorph_service.config
+++ b/.ebextensions/03_create_xenomorph_service.config
@@ -9,8 +9,7 @@ files:
             After=network.target
 
             [Service]
-            User=root
-            Group=root
+            User=webapp
             Type=simple
             WorkingDirectory=/var/app/current
             Environment=LANG=en_US.UTF-8
