RIP-739, apply new apache config

--- a/.ebextensions/01_create_apache_conf.config
+++ b/.ebextensions/01_create_apache_conf.config
@@ -1,23 +1,29 @@
 #
 # Apache configuration files and keys.
 #
+option_settings:
+  aws:elasticbeanstalk:environment:process:https:
+    Port: '443'
+    Protocol: HTTPS
+
+Resources:
+  AWSEBAutoScalingGroup:
+    Metadata:
+      AWS::CloudFormation::Authentication:
+        S3Access:
+          type: S3
+          roleName: '`{"Fn::GetOptionSetting": {"Namespace": "aws:elasticbeanstalk:application:environment", "OptionName": "IAM_INSTANCE_PROFILE"}}`'
 files:
-  /tmp/ripley.conf:
+  /etc/pki/tls/certs/apachessl.crt:
     mode: '000644'
     owner: root
     group: root
-    content: |
-      AllowEncodedSlashes NoDecode
+    source: https://ripley-deploy-configs.s3.us-west-2.amazonaws.com/ripley/apachessl.crt
+    authentication: S3Access
 
-  /tmp/ssl.conf:
-    mode: '000644'
+  /etc/pki/tls/certs/apachessl.key:
+    mode: '000600'
     owner: root
     group: root
-    content: |
-      LoadModule ssl_module modules/mod_ssl.so
-
-      # Redirect http to https.
-      RewriteEngine On
-      <If "-n '%{HTTP:X-Forwarded-Proto}' && %{HTTP:X-Forwarded-Proto} != 'https'">
-        RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
-      </If>
+    source: https://ripley-deploy-configs.s3.us-west-2.amazonaws.com/ripley/apachessl.key
+    authentication: S3Access
