--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,34 @@
-bonsai==1.5.1
-boto3==1.20.24
+bonsai==1.5.3
+boto3==1.34.156
 canvasapi==3.2.0
 decorator==5.1.1
 Flask==2.3.3
-Flask-Caching==2.0.2
-Flask-Login==0.6.2
+Flask-Caching==2.3.0
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
-hiredis==2.2.3
+hiredis==2.4.0
 psycopg2==2.9.9
 PyLTI1p3==2.0.0
 python-cas==1.6.0
-python-dateutil==2.8.2
-pytz==2023.3.post1
+python-dateutil==2.9.0.post0
+pytz==2023.4
 redis==4.6.0
-requests==2.31.0
-rq==1.15.1
-schedule==1.2.1
+requests==2.32.3
+rq==1.16.2
+schedule==1.2.2
 setproctitle==1.3.3
-simplejson==3.19.1
-smart-open==4.1.2
-SQLAlchemy==2.0.21
-Unidecode==1.3.7
-Werkzeug==2.3.7
+simplejson==3.19.2
+smart-open==5.2.1
+SQLAlchemy==2.0.32
+Unidecode==1.3.8
+Werkzeug==2.3.8
 zipstream-new==1.1.8
 
 # For testing
 
-fakeredis==2.19.0
-moto==3.1.16
-pytest==7.4.2
-pytest-flask==1.2.0
-requests-mock==1.11.0
-tox==4.11.3
+fakeredis==2.23.5
+moto==4.2.14
+pytest==7.4.4
+pytest-flask==1.3.0
+requests-mock==1.12.1
+tox==4.17.1
