--- a/.ebextensions/00_ami.config
+++ b/.ebextensions/00_ami.config
@@ -1,21 +1,14 @@
 #
 # AWS configuration for Ripley
 #
-
 packages:
   yum:
-    amazon-linux-extras: []
-    awslogs: []
     gcc-c++: []
     git: []
+    postgresql15: []
     mod_ssl: []
     openldap-devel: []
-
-commands:
-  01_postgres_activate:
-    command: sudo amazon-linux-extras install postgresql14
-  02_libpq_devel_install:
-    command: sudo yum install -y libpq-devel
+    libpq-devel: []
 
 option_settings:
   aws:elasticbeanstalk:cloudwatch:logs:
@@ -30,22 +23,23 @@ option_settings:
     /favicon.ico: dist/static/favicon.ico
 
 files:
-  /etc/awslogs/awscli.conf:
-    mode: '000600'
-    owner: root
-    group: root
-    content: |
-      [plugins]
-      cwlogs = cwlogs
-      [default]
-      region = `{"Ref":"AWS::Region"}`
-
-  /etc/awslogs/config/logs.conf:
+  /opt/aws/amazon-cloudwatch-agent/bin/config.json:
     mode: '000644'
     owner: root
     group: root
     content: |
-      [/var/app/current/ripley.log]
-      log_group_name=`{"Fn::Join":["/", ["/aws/elasticbeanstalk", { "Ref":"AWSEBEnvironmentName" }, "var/app/current/ripley.log"]]}`
-      log_stream_name={instance_id}
-      file=/var/app/current/ripley.log*
+      {
+        "logs": {
+          "logs_collected": {
+            "files": {
+              "collect_list": [
+                {
+                  "file_path": "/var/app/current/ripley.log*",
+                  "log_group_name": "`{"Fn::Join":["/", ["/aws/elasticbeanstalk", { "Ref":"AWSEBEnvironmentName" }, "var/app/current/ripley.log"]]}`",
+                  "log_stream_name": "{instance_id}"
+                }
+              ]
+            }
+          }
+        }
+      }
